# Spherical-Ground-Finder

./: README.md  connectSphere.sh
src/ground_finder/: CMakeLists.txt  README.md  filter_config.rviz  package.xml
src/ground_finder/data/: absAngleError.m  comp_final_results.m  evalRansac.m  evalScenario.m  evalScenarioOBC.m  evaluation.m  plotBarStackGroups.m  plotError.m  readCSV.m  stdVariance.m  takeMeanTimes.m
src/ground_finder/data/GroundTruth/: GT_Caro_Draussen_hoch.txt  GT_Caro_Draussen_runter.txt  GT_Caro_Physik.txt  establishGTAngle.m
src/ground_finder/data/lsf/: geo-geo-draussen_hoch.csv  geo-geo-draussen_runter.csv  geo-geo-flur.csv  geo-geo-obc.csv  geo-geo-physik_fast.csv  geo-geo-physik_slow.csv  geo-geo-saal.csv  geo-geo-tunnel.csv  geo-geo-wand.csv  geo-kdt-draussen_hoch.csv  geo-kdt-draussen_runter.csv  geo-kdt-flur.csv  geo-kdt-physik_fast.csv  geo-kdt-physik_slow.csv  geo-kdt-saal.csv  geo-kdt-tunnel.csv  geo-kdt-wand.csv  kdt-geo-draussen_hoch.csv  kdt-geo-draussen_runter.csv  kdt-geo-flur.csv  kdt-geo-physik_fast.csv  kdt-geo-physik_slow.csv  kdt-geo-saal.csv  kdt-geo-tunnel.csv  kdt-geo-wand.csv  kdt-kdt-draussen_hoch.csv  kdt-kdt-draussen_runter.csv  kdt-kdt-flur.csv  kdt-kdt-physik_fast.csv  kdt-kdt-physik_slow.csv  kdt-kdt-saal.csv  kdt-kdt-tunnel.csv  kdt-kdt-wand.csv  none-geo-draussen_hoch.csv  none-geo-draussen_runter.csv  none-geo-flur.csv  none-geo-obc2.csv  none-geo-physik_fast.csv  none-geo-physik_slow.csv  none-geo-saal.csv  (+11 more)
src/ground_finder/data/pca/: geo-geo-draussen_hoch.csv  geo-geo-draussen_runter.csv  geo-geo-flur.csv  geo-geo-obc.csv  geo-geo-physik_fast.csv  geo-geo-physik_slow.csv  geo-geo-saal.csv  geo-geo-tunnel.csv  geo-geo-wand.csv  geo-kdt-draussen_hoch.csv  geo-kdt-draussen_runter.csv  geo-kdt-flur.csv  geo-kdt-physik_fast.csv  geo-kdt-physik_slow.csv  geo-kdt-saal.csv  geo-kdt-tunnel.csv  geo-kdt-wand.csv  kdt-geo-draussen_hoch.csv  kdt-geo-draussen_runter.csv  kdt-geo-flur.csv  kdt-geo-physik_fast.csv  kdt-geo-physik_slow.csv  kdt-geo-saal.csv  kdt-geo-tunnel.csv  kdt-geo-wand.csv  kdt-kdt-draussen_hoch.csv  kdt-kdt-draussen_runter.csv  kdt-kdt-flur.csv  kdt-kdt-physik_fast.csv  kdt-kdt-physik_slow.csv  kdt-kdt-saal.csv  kdt-kdt-tunnel.csv  kdt-kdt-wand.csv  none-geo-draussen_hoch.csv  none-geo-draussen_runter.csv  none-geo-flur.csv  none-geo-obc2.csv  none-geo-physik_fast.csv  none-geo-physik_slow.csv  none-geo-saal.csv  (+11 more)
src/ground_finder/data/ran/: geo-geo-draussen_hoch.csv  geo-geo-draussen_runter.csv  geo-geo-flur.csv  geo-geo-lsf_draussen_hoch.csv  geo-geo-lsf_draussen_runter.csv  geo-geo-lsf_flur.csv  geo-geo-lsf_obc.csv  geo-geo-lsf_physik_fast.csv  geo-geo-lsf_physik_slow.csv  geo-geo-lsf_saal.csv  geo-geo-lsf_tunnel.csv  geo-geo-lsf_wand.csv  geo-geo-obc.csv  geo-geo-physik_fast.csv  geo-geo-physik_slow.csv  geo-geo-saal.csv  geo-geo-tunnel.csv  geo-geo-wand.csv  geo-kdt-draussen_hoch.csv  geo-kdt-draussen_runter.csv  geo-kdt-flur.csv  geo-kdt-physik_fast.csv  geo-kdt-physik_slow.csv  geo-kdt-saal.csv  geo-kdt-tunnel.csv  geo-kdt-wand.csv  kdt-geo-draussen_hoch.csv  kdt-geo-draussen_runter.csv  kdt-geo-flur.csv  kdt-geo-physik_fast.csv  kdt-geo-physik_slow.csv  kdt-geo-saal.csv  kdt-geo-tunnel.csv  kdt-geo-wand.csv  kdt-kdt-draussen_hoch.csv  kdt-kdt-draussen_runter.csv  kdt-kdt-flur.csv  kdt-kdt-physik_fast.csv  kdt-kdt-physik_slow.csv  kdt-kdt-saal.csv  (+21 more)
src/ground_finder/data/rht/: geo-geo-draussen_hoch.csv  geo-geo-draussen_runter.csv  geo-geo-flur.csv  geo-geo-obc.csv  geo-geo-physik_fast.csv  geo-geo-physik_slow.csv  geo-geo-saal.csv  geo-geo-tunnel.csv  geo-geo-wand.csv  geo-kdt-draussen_hoch.csv  geo-kdt-draussen_runter.csv  geo-kdt-flur.csv  geo-kdt-physik_fast.csv  geo-kdt-physik_slow.csv  geo-kdt-saal.csv  geo-kdt-tunnel.csv  geo-kdt-wand.csv  kdt-geo-draussen_hoch.csv  kdt-geo-draussen_runter.csv  kdt-geo-flur.csv  kdt-geo-physik_fast.csv  kdt-geo-physik_slow.csv  kdt-geo-saal.csv  kdt-geo-tunnel.csv  kdt-geo-wand.csv  kdt-kdt-draussen_hoch.csv  kdt-kdt-draussen_runter.csv  kdt-kdt-flur.csv  kdt-kdt-physik_fast.csv  kdt-kdt-physik_slow.csv  kdt-kdt-saal.csv  kdt-kdt-tunnel.csv  kdt-kdt-wand.csv  none-geo-draussen_hoch.csv  none-geo-draussen_runter.csv  none-geo-flur.csv  none-geo-obc2.csv  none-geo-physik_fast.csv  none-geo-physik_slow.csv  none-geo-saal.csv  (+11 more)
src/ground_finder/data/rht2/: geo-geo-draussen_hoch.csv  geo-geo-draussen_runter.csv  geo-geo-flur.csv  geo-geo-obc.csv  geo-geo-physik_fast.csv  geo-geo-physik_slow.csv  geo-geo-saal.csv  geo-geo-tunnel.csv  geo-geo-wand.csv  geo-kdt-draussen_hoch.csv  geo-kdt-draussen_runter.csv  geo-kdt-flur.csv  geo-kdt-physik_fast.csv  geo-kdt-physik_slow.csv  geo-kdt-saal.csv  geo-kdt-tunnel.csv  geo-kdt-wand.csv  kdt-geo-draussen_hoch.csv  kdt-geo-draussen_runter.csv  kdt-geo-flur.csv  kdt-geo-physik_fast.csv  kdt-geo-physik_slow.csv  kdt-geo-saal.csv  kdt-geo-tunnel.csv  kdt-geo-wand.csv  kdt-kdt-draussen_hoch.csv  kdt-kdt-draussen_runter.csv  kdt-kdt-flur.csv  kdt-kdt-physik_fast.csv  kdt-kdt-physik_slow.csv  kdt-kdt-saal.csv  kdt-kdt-tunnel.csv  kdt-kdt-wand.csv  none-geo-draussen_hoch.csv  none-geo-draussen_runter.csv  none-geo-flur.csv  none-geo-obc2.csv  none-geo-physik_fast.csv  none-geo-physik_slow.csv  none-geo-saal.csv  (+10 more)
src/ground_finder/data/test/: runtime_eval_ikd.m  (+1 more)
src/ground_finder/include/: ground_finder.h  hough.h  math_helpers.h
src/ground_finder/launch/: main.launch  test.launch
src/ground_finder/src/: ground_finder.cpp  hough.cpp  main.cpp  math_helpers.cpp
src/ikd_tree/: CMakeLists.txt  README.md  package.xml
src/ikd_tree/src/: ikd_Tree.cpp
(+26 files in other folders)
