<?xml version="1.0"?>
<package format="2">
  <name>ground_finder</name>
  <version>0.0.0</version>
  <description>The ground_finder package</description>

  <!-- Developer -->
  <maintainer email="privat@privat.privat">Caro</maintainer>
  <!-- License Tag-->
  <license>--</license>
  <!-- Repository-->
  <url type="repository">https://gitlab2.informatik.uni-wuerzburg.de/s391207/ma-thesis</url>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>ikd_tree</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
